--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,39 @@
-babel
-python-dateutil==2.6.0
-flask-moment
-flask-wtf
+alembic==1.4.2
+appdirs==1.4.3
+astroid==2.3.3
+Babel==2.8.0
+click==7.1.1
+colorama==0.4.3
+distlib==0.3.0
+filelock==3.0.12
+Flask==1.1.1
+Flask-Migrate==2.5.3
+Flask-Moment==0.9.0
+Flask-SQLAlchemy==2.4.1
+Flask-WTF==0.14.3
+isort==4.3.21
+itsdangerous==1.1.0
+Jinja2==2.11.1
+lazy-object-proxy==1.4.3
+Mako==1.1.2
+MarkupSafe==1.1.1
+mccabe==0.6.1
+pbr==5.4.4
+psycopg2==2.8.4
+psycopg2-binary==2.8.4
+pylint==2.4.4
+pylint-flask==0.6
+pylint-plugin-utils==0.6
+python-dateutil==2.8.1
+python-editor==1.0.4
+pytz==2019.3
+six==1.14.0
+SQLAlchemy==1.3.15
+stevedore==1.32.0
+virtualenv==20.0.15
+virtualenv-clone==0.5.4
+virtualenvwrapper==4.8.4
+virtualenvwrapper-win==1.2.6
+Werkzeug==1.0.1
+wrapt==1.11.2
+WTForms==2.2.1
